<resources>
    <string name="app_name">World Cam</string>
    <string name="new_task">Ожидание</string>
    <string name="running">Выполнение&#8230;</string>
    <string name="error">Ошибка</string>
    <string name="done">Готово</string>
    <string name="done_sec_format">Готово (%1$.2f сек)</string>

    <string name="download">Download</string>
    <string name="init_db">Init DB</string>
    <string name="json_object">JSONObject</string>
    <string name="json_reader">JsonReader</string>
    <string name="clean">Clean</string>
    <string name="city_list">City List</string>

</resources>
