<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="40dp"
    tools:context="ru.ifmo.android_2015.worldcam.DemoActivity"
    >

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:text="@string/download"
        android:onClick="onButtonClick"
        />

    <Button
        android:id="@+id/btn_init_db"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_marginTop="20dp"
        android:text="@string/init_db"
        android:onClick="onButtonClick"
        />

    <Button
        android:id="@+id/btn_city_list"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_marginTop="20dp"
        android:text="@string/city_list"
        android:onClick="onButtonClick"
        />

    <Button
        android:id="@+id/btn_json_reader"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_marginTop="20dp"
        android:text="@string/json_reader"
        android:onClick="onButtonClick"
        />

    <Button
        android:id="@+id/btn_json_object"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_marginTop="20dp"
        android:text="@string/json_object"
        android:onClick="onButtonClick"
        />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_marginTop="20dp"
        android:text="@string/clean"
        android:onClick="onButtonClick"
        />

</LinearLayout>